# osc

./: .gitignore  MACOSX.md  Makefile  Makefile.am  README.md  config.h  configure.ac
doc/: MACOSX.md  Makefile  README.md
src/: Makefile  Makefile.am  ascii_output.c  ascii_output.h  audio_output.c  audio_output.h  compute.c  compute.h  config.h  configure.ac  main.c  options.c  options.h  osc  osc.c  osc.h  output.c  output.h  signal.c  system.c  system.h
src/.deps/: main.Po  osc.Po  output.Po  system.Po
test/: Makefile  Makefile.am  README.md  check_osc_compute.c
